website: Link to /releases/latest from the main page

--- a/website/layouts/index.html
+++ b/website/layouts/index.html
@@ -26,7 +26,7 @@
         <p class="pitch">{{ i18n "index.main-pitch" | safeHTML }}</p>
       </div>
       <div class="col-md-4">
-        <a class="release-button" href="/releases/{{ .Site.Params.ReleaseVersion }}/">
+        <a class="release-button" href="/releases/latest/">
           <div class="release-version">
             {{ i18n "index.run-button" $.Site.Params.ReleaseVersion | safeHTML }}
           </div>
