feat: move columnDivisinWidth to local state

--- a/src/components/common/ContentArea.module.scss
+++ b/src/components/common/ContentArea.module.scss
@@ -33,5 +33,5 @@ div.contentArea {
 
 div.contentAreaFull {
   margin: $vertical-margin $horizontal-margin $vertical-margin $horizontal-margin;
-  height: 90vh;
+  height: 98%;
 }
